--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,12 @@
   color: #61dafb;
 }
 
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
